--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "history": "^4.7.2",
     "jsdom": "^12.1.0",
     "prop-types": "^15.6.2",
@@ -57,6 +58,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
